<resources>
    <string name="app_name">Super!Market</string>
    <string name="address">Address:</string>
    <string name="name">Name:</string>
    <string name="edit_text_of_address">Edit text of address</string>
    <string name="save">Save</string>
    <string name="rate">Rate</string>
    <string name="liquor_department">Liquor Department</string>
    <string name="ease_of_checkout">Ease of Checkout</string>
    <string name="back">Back</string>
    <string name="cheese_department">Cheese Department</string>
    <string name="meat_department">Meat Department</string>
</resources>